--- a/html/index.html
+++ b/html/index.html
@@ -123,8 +123,18 @@
 
                                         </h3>
 
-                                        <h5 class="slider-content-text c-gray" data-swiper-parallax="-200">The web can be as complicated as it sounds, but we know how it fits together. Pineapple is a full-service digital agency with an in-house team of specialists equipped to handle just about any digital project. We have offices in New York City and London.</h5>
+                                        <h5 class="slider-content-text c-gray" data-swiper-parallax="-200">The web can be as complicated as it sounds, but we know how it fits together. Pineapple is a full-service digital agency with an in-house team of specialists equipped to handle just about any digital project. We have offices in New York City and London.
+                                        </h5>
+                                        <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
 
+                                            <a href="05_service_details_localseo.html"
+                                               class="btn btn-medium btn--dark btn-hover-shadow">
+                                                <span class="text">Contact Us</span>
+                                                <span class="semicircle"></span>
+                                            </a>
+
+
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
