--- a/html/index.html
+++ b/html/index.html
@@ -73,8 +73,35 @@
                             <a href="#">About</a>
                         </li>
 
-                        <li class="menu-item-has-children">
+                        <li class="">
                             <a href="#">Services</a>
+                            <ul class="dropdown">
+                                <li class="hover-ver2">
+                                    <a href="./service_01.html">
+                                        Web Development
+                                    </a>
+                                </li>
+                                <li class="hover-ver2">
+                                    <a href="#">
+                                        Search Engine Optimization
+                                    </a>
+                                </li>
+                                <li class="hover-ver2">
+                                    <a href="#">
+                                        Digital Marketing
+                                    </a>
+                                </li>
+                                <li class="menu-item-has-children hover-ver2">
+                                    <a href="#">
+                                        Conversion Rate Optimization
+                                    </a>
+                                </li>
+                                <li class="hover-ver2">
+                                    <a href="#">
+                                        E-Commerce
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
 
                         <li class="menu-item-has-children">
@@ -82,7 +109,7 @@
                         </li>
 
                         <li class="">
-                            <a href="#">Contact</a>
+                            <a href="./contact.html">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -718,11 +745,11 @@ End Monthly Pineapple -->
 </div>
 
 <footer>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <span>
-                    Copyright © 2016 <a href="index.html" class="sub-footer__link">Pineapple</a>
+                   Copyright © 2017 Pineapple, a division of the <a href="index.html" target="_blank" class="sub-footer__link">Oxford Digital Consulting Group.</a>
                 </span>
             </div>
         </div>
