--- a/html/service_01.html
+++ b/html/service_01.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" type="text/css" href="css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="css/primary-menu.css">
 	<link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
+  <link rel="stylesheet" type="text/css" href="css/custom.css">
 
 	<!--Styles for RTL-->
 
@@ -81,9 +82,9 @@
                               <a href="#">Services</a>
                               <ul class="dropdown">
                                   <li class="hover-ver2">
-                                      <a href="05_service_details_localseo.html">
-                                          Web Development
-                                      </a>
+                                    <a href="./service_01.html">
+                                        Web Development
+                                    </a>
                                   </li>
                                   <li class="hover-ver2">
                                       <a href="07_service_email_marketing.html">
@@ -215,7 +216,7 @@
 									<span class="semicircle"></span>
 								</div>
 
-								
+
 							</div>
 							</div>
 						</div>
