Added contacts section to bottom of page and link in menu

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,6 @@
 
 <!-- Header -->
 
-
 <header class="header" id="site-header">
 
     <div class="container">
@@ -109,12 +108,10 @@
                         </li>
 
                         <li class="">
-                            <a href="./contact.html">Contact</a>
+                            <a href="#contacts-section">Contact</a>
                         </li>
                     </ul>
                 </nav>
-
-
             </div>
     </div>
 
@@ -742,7 +739,49 @@ End Monthly Pineapple -->
 
 <!-- ... End Pineapple Score -->
 
+<!-- Contacts -->
+
+<div class="container-fluid" id="contacts-section">
+    <div class="row medium-padding80 bg-border-color contacts-shadow">
+        <div class="container">
+            <div class="row">
+                <div class="contacts">
+                    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                        <div class="contacts-item">
+                            <img src="img/contact7.png" alt="phone">
+                            <div class="content">
+                                <a href="#" class="title">Melbourne, Australia</a>
+                                <p class="sub-title">795 South Park Avenue</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                        <div class="contacts-item">
+                            <img src="img/contact8.png" alt="phone">
+                            <div class="content">
+                                <a href="#" class="title">info@seosight.com</a>
+                                <p class="sub-title">online support</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                        <div class="contacts-item">
+                            <img src="img/contact9.png" alt="phone">
+                            <div class="content">
+                                <a href="#" class="title">8 800 567.890.11</a>
+                                <p class="sub-title">Mon-Fri 9am-6pm</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<!-- End Contacts -->
 
 <footer>
     <div class="container-fluid">
