--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
 
                     <ul class="primary-menu-menu">
                         <li class="menu-item-has-children">
-                            <a href="#">About</a>
+                            <a href="#pineapple-process">About</a>
                         </li>
 
                         <li class="">
@@ -104,7 +104,7 @@
                         </li>
 
                         <li class="menu-item-has-children">
-                            <a href="#">Work</a>
+                            <a href="#featured-work">Work</a>
                         </li>
 
                         <li class="">
@@ -394,7 +394,7 @@
 
 <!-- Pineapple Process -->
 
-<div class="container-fluid">
+<div class="container-fluid" id="pineapple-process">
     <div class="row">
         <div class="background-mountains medium-padding120 scrollme">
 
@@ -496,7 +496,7 @@
 
 <!-- Featured Work -->
 
-<div class="container">
+<div class="container" id="featured-work">
     <div class="row medium-padding120">
         <div class="recent-case align-center">
 
