Update header styling

--- a/html/index.html
+++ b/html/index.html
@@ -38,8 +38,9 @@
 
 <!-- Header -->
 
-<header class="header" id="site-header">
 
+<!-- <header class="header" id="site-header"> -->
+<header class="header">
     <div class="container">
 
             <div class="header-content-wrapper">
