--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,7 @@
                             <a href="#pineapple-process">About</a>
                         </li>
 
-                        <li class="">
+                        <!-- <li class="">
                             <a href="#">Services</a>
                             <ul class="dropdown">
                                 <li class="hover-ver2">
@@ -102,7 +102,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> -->
 
                         <li class="menu-item-has-children">
                             <a href="#featured-work">Work</a>
@@ -115,7 +115,6 @@
                 </nav>
             </div>
     </div>
-
 </header>
 <!-- ... End Header -->
 
@@ -132,7 +131,7 @@
 
 
                     <!-- Slide Pineapple -->
-                    <div class="pineapple-slide swiper-slide bg-border-color">
+                    <div class="pineapple-slide top-slide swiper-slide bg-border-color">
 
                         <div class="container">
                             <div class="row table-cell">
@@ -150,32 +149,29 @@
 
                                         <h5 class="slider-content-text c-gray" data-swiper-parallax="-200">The web can be as complicated as it sounds, but we know how it fits together. Pineapple is a full-service digital agency with an in-house team of specialists equipped to handle just about any digital project. We have offices in New York City and London.
                                         </h5>
-                                        <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
-
-                                            <a href="05_service_details_localseo.html"
+                                        <!-- <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
+                                            <a href="#"
                                                class="btn btn-medium btn--dark btn-hover-shadow">
                                                 <span class="text">Contact Us</span>
                                                 <span class="semicircle"></span>
                                             </a>
-
-
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
-                                <div class="col-lg-12">
+                                <!-- <div class="col-lg-12">
                                     <div class="slider-thumb" data-swiper-parallax="-400" data-swiper-parallax-duration="500">
                                       <div class="slider-image">
                                         <img src="img/slider1.png" alt="slider">
                                       </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                             </div>
                         </div>
                     </div>
 
                     <!-- Slide SEO -->
-                    <div class="seo-slide swiper-slide bg-primary-color main-slider-bg-dark thumb-left">
+                    <div class="seo-slide top-slide swiper-slide bg-primary-color main-slider-bg-dark thumb-left">
 
                         <div class="container table full-height">
                             <div class="row table-cell">
@@ -186,23 +182,20 @@
                                         <h5 class="slider-content-text" data-swiper-parallax="-200">It's a constantly evolving discipline which marries technical considerations with content, social, and keyword strategies. (Naturally, we're very good at it.)
                                         </h5>
 
-                                        <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
-
-
-                                            <a href="05_service_details_localseo.html"
+                                        <!-- <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
+                                            <a href="#"
                                                class="btn btn-medium btn--dark btn-hover-shadow">
                                                 <span class="text">learn more</span>
                                                 <span class="semicircle"></span>
                                             </a>
 
 
-                                            <a href="05_service_details_localseo.html" class="btn btn-small btn--primary"
+                                            <a href="#" class="btn btn-small btn--primary"
                                                data-swiper-parallax="-300">
                                                 <span class="text">Another Link</span>
                                                 <i class="seoicon-right-arrow"></i>
                                             </a>
-
-                                        </div>
+                                        </div> -->
 
                                     </div>
                                 </div>
@@ -218,7 +211,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="marketing-slide swiper-slide bg-secondary-color main-slider-bg-dark">
+                    <div class="marketing-slide top-slide swiper-slide bg-secondary-color main-slider-bg-dark">
 
                         <div class="container table full-height">
                             <div class="row table-cell">
@@ -232,7 +225,7 @@
                                         <h5 class="slider-content-text" data-swiper-parallax="-200">Don't know your PPC from your SEM? That's what Pineapple is here for. We've managed over $6,000,000 in digital marketing spend across AdWords, Facebook, AdRoll, and dozens of other platforms for our clients, and have consistently outperformed major agencies whose sole focus is digital marketing.
                                         </h5>
 
-                                        <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
+                                        <!-- <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
 
                                           <a href="08_service_ppc_management.html"
                                              class="btn btn-medium btn--dark btn-hover-shadow">
@@ -240,7 +233,7 @@
                                               <span class="semicircle"></span>
                                           </a>
 
-                                        </div>
+                                        </div> -->
 
                                     </div>
 
@@ -254,7 +247,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="conversion-slide swiper-slide bg-orange-color main-slider-bg-dark">
+                    <div class="conversion-slide top-slide swiper-slide bg-orange-color main-slider-bg-dark">
                         <div class="container table full-height">
                             <div class="row table-cell">
 
@@ -265,15 +258,15 @@
                                         <h5 class="slider-content-text" data-swiper-parallax="-200">Conversion rate optimization, or simply "CRO", is the study of the factors which affect conversion rates. It's where tech and psychology meet to figure out what makes customers more likely to spend money.
                                         </h5>
 
-                                        <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
+                                        <!-- <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
 
-                                          <a href="08_service_ppc_management.html"
+                                          <a href="#"
                                              class="btn btn-medium btn--dark btn-hover-shadow">
                                               <span class="text">Learn More</span>
                                               <span class="semicircle"></span>
                                           </a>
 
-                                        </div>
+                                        </div> -->
 
                                     </div>
 
@@ -289,7 +282,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide bg-green-color main-slider-bg-dark">
+                    <div class="swiper-slide top-slide bg-green-color main-slider-bg-dark">
 
                         <div class="container table full-height">
                             <div class="row table-cell">
@@ -302,18 +295,16 @@
 
                                         <h5 class="slider-content-text" data-swiper-parallax="-200">Looking to set up an e-commerce site? It can be messy doing it alone, but we at Pineapple can handle the entire process from site build to customer acquisition, and train your team to take the ongoing responsibilities on in-house as desired.
                                         </h5>
-
+<!--
                                         <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
 
-                                            <a href="08_service_ppc_management.html"
+                                            <a href="#"
                                                class="btn btn-medium btn--dark btn-hover-shadow">
                                                 <span class="text">Learn More</span>
                                                 <span class="semicircle"></span>
                                             </a>
 
-
-
-                                        </div>
+                                        </div> -->
 
                                     </div>
                                 </div>
@@ -558,10 +549,10 @@
                     </div>
                 </div>
 
-                <a href="11_case_studies.html" class="btn btn-medium btn--dark">
+                <!-- <a href="11_case_studies.html" class="btn btn-medium btn--dark">
                     <span class="text">More Projects</span>
                     <span class="semicircle"></span>
-                </a>
+                </a> -->
             </div>
 
         </div>
@@ -753,7 +744,7 @@ End Monthly Pineapple -->
                             <svg enable-background="new 0 0 64 64" version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><path d="  M45.1,44.2C42.9,42,39.6,40,37,42.6c-1.8,1.8-2.6,3.9-2.6,3.9s-4.3,2.3-11.7-5.2s-5.2-11.7-5.2-11.7s2.1-0.8,3.9-2.6  c2.6-2.6,0.6-5.9-1.7-8.1c-2.7-2.7-6.2-4.9-8.2-2.9c-3.7,3.7-4.4,8.4-4.4,8.4S9,35.5,18.7,45.3s20.9,11.6,20.9,11.6s4.7-0.7,8.4-4.4  C50,50.4,47.8,46.9,45.1,44.2z" fill="none" stroke="#fcb03b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><path d="  M18.4,12.2C22.2,9.5,26.9,8,32,8c13.3,0,24,10.8,24,24c0,4-1.3,9-4.4,12.2" fill="none" stroke="#fcb03b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><path d="  M27.3,55.6c-9.8-1.9-17.5-9.8-19.1-19.7" fill="none" stroke="#fcb03b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><path d="  M30,21c0,0,4.4,0,5.2,0c1.2,0,1.8,0.2,1.8,1.1s0,0.7,0,1.3c0,0.6,0,1.4-1.6,2.5c-2.3,1.6-5.6,3.8-5.6,5.1c0,1.6,0.7,2,1.8,2  s5.3,0,5.3,0" fill="none" stroke="#fcb03b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><path d="  M40,21c0,0,0,2.8,0,3.8S39.9,27,41.5,27c1.6,0,4.5,0,4.5,0v-6.1V33" fill="none" stroke="#fcb03b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/></svg>
                         </div>
                         <div class="content">
-                            <a href="#" class="title">(+1) 213-293-5547</a>
+                            <p class="contact-label">(+1) 213-293-5547</p>
                             <p class="sub-title">Text us 24/7</p>
                         </div>
                     </div>
@@ -765,7 +756,7 @@ End Monthly Pineapple -->
                             <svg enable-background="new 0 0 64 64" version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><polyline fill="none" points="  54,17 32,36 10,17 " stroke="#f15b26" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><line fill="none" stroke="#f15b26" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" x1="10.9" x2="26" y1="48" y2="36"/><path d="  M32.7,49H13c-2.2,0-4-1.8-4-4V19c0-2.2,1.8-4,4-4h38c2.2,0,4,1.8,4,4v15.5" fill="none" stroke="#f15b26" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><circle cx="44.9" cy="43.1" fill="none" r="10.1" stroke="#f15b26" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><path d="  M44,41.4c0,0-1.3,3.4-0.9,5.1c0.4,1.7,2.6,2.1,3.7,1.1" fill="none" stroke="#f15b26" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><g><circle cx="45.4" cy="38.3" fill="#DCE9EE" r="0.9"/><path d="M45.4,37.3c-0.5,0-0.9,0.4-0.9,0.9c0,0.5,0.4,0.9,0.9,0.9s0.9-0.4,0.9-0.9C46.4,37.8,46,37.3,45.4,37.3   L45.4,37.3z" fill="#f15b26"/></g></svg>
                         </div>
                         <div class="content">
-                            <a href="#" class="title">hi@pineappleny.com</a>
+                           <a class="contact-label" href="mailto:hi@pineappleny.com?Subject=Hello%20Pineapple" target="_top">hi@pineappleny.com</a>
                         </div>
                     </div>
                 </div>
@@ -776,7 +767,7 @@ End Monthly Pineapple -->
                             <svg enable-background="new 0 0 64 64" version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" points="  38.7,36.4 56,32 38.7,27.6 42,22 36.4,25.3 32,8 27.6,25.3 22,22 25.3,27.6 8,32 25.3,36.4 22,42 27.6,38.7 32,56 36.4,38.7 42,42   " stroke="#3cb878" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></polygon><circle cx="32" cy="32" fill="none" r="4" stroke="#3cb878" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></circle><path d="  M26.1,53.2c-7.9-2.2-13.9-8.6-15.6-16.7" fill="none" stroke="#3cb878" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></path><path d="  M53.5,36.9c-1.8,8.1-8.2,14.6-16.3,16.5" fill="none" stroke="#3cb878" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></path><path d="  M36.9,10.5c8.2,1.9,14.7,8.3,16.6,16.6" fill="none" stroke="#3cb878" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></path><path d="  M10.5,27.1c1.9-8.2,8.3-14.6,16.4-16.5" fill="none" stroke="#3cb878" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></path></svg>
                         </div>
                         <div class="content">
-                            <a href="#" class="title">Brooklyn, NY</a>
+                            <p class="contact-label">Brooklyn, NY</p>
                             <p class="sub-title">71 Pineapple Street, Suite A1</p>
                         </div>
                     </div>
@@ -791,7 +782,7 @@ End Monthly Pineapple -->
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <span>
-                        Copyright © 2017 Pineapple, a division of the <a href="#">Oxford Digital Consulting Group</a>
+                        Copyright © 2017 Pineapple, a division of the <a href="http://oxforddigit.al/" target="_blank">Oxford Digital Consulting Group</a>
                     </span>
                     <a class="back-to-top" href="#">
                         <svg class="back-to-top">
