Featured work styling changes

--- a/html/index.html
+++ b/html/index.html
@@ -109,7 +109,7 @@
                         </li>
 
                         <li class="">
-                            <a href="#site-footer">Contact</a>
+                            <a href="#pineapple-score">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -129,40 +129,30 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
 
+                    <!-- Slide Conversion -->
+                    <div class="intro-slide top-slide swiper-slide bg-border-color main-slider-bg-dark">
+                        <div class="container table full-height">
+                            <div class="row table-cell">
 
-                    <!-- Slide Pineapple -->
-                    <div class="pineapple-slide top-slide swiper-slide bg-border-color">
+                                <div class="col-lg-12">
 
-                        <div class="container">
+                                    <div class="slider-content align-center">
+                                      <img class="intro-pineapple" src="img/pineapple-small.png"/>
+                                      <h3 class="slider-content-title" data-swiper-parallax="-100">The web can be as complicated as it sounds, but we know how it fits together.</h3>
+                                      <h5 class="slider-content-text" data-swiper-parallax="-200">Pineapple is a full-service digital agency with an in-house team of specialists equipped to handle just about any digital project. We have offices in New York City and London.
+                                      </h5>
+                                    </div>
 
-                              <h3 class="slider-content-title" data-swiper-parallax="-100">
-                                <div class="pineapple">
-                                  <img  src="img/pineapple-small.png"/>
                                 </div>
 
-                              </h3>
+                                <div class="col-lg-12">
 
-                              <h5 class="slider-content-text c-gray" data-swiper-parallax="-200">The web can be as complicated as it sounds, but we know how it fits together. Pineapple is a full-service digital agency with an in-house team of specialists equipped to handle just about any digital project. We have offices in New York City and London.
-                              </h5>
-                                        <!-- <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
-                                            <a href="#"
-                                               class="btn btn-medium btn--dark btn-hover-shadow">
-                                                <span class="text">Contact Us</span>
-                                                <span class="semicircle"></span>
-                                            </a>
-                                        </div> -->
+                                </div>
 
-
-                                <!-- <div class="col-lg-12">
-                                    <div class="slider-thumb" data-swiper-parallax="-400" data-swiper-parallax-duration="500">
-                                      <div class="slider-image">
-                                        <img src="img/slider1.png" alt="slider">
-                                      </div>
-                                    </div>
-                                </div> -->
-
+                            </div>
                         </div>
                     </div>
+                    <!-- End Slide Conversion -->
 
                     <!-- Slide SEO -->
                     <div class="seo-slide top-slide swiper-slide bg-primary-color main-slider-bg-dark thumb-left">
@@ -205,6 +195,9 @@
                             </div>
                         </div>
                     </div>
+                    <!-- End Slide SEO -->
+
+                    <!-- Slide Marketing -->
                     <div class="marketing-slide top-slide swiper-slide bg-secondary-color main-slider-bg-dark">
 
                         <div class="container table full-height">
@@ -241,6 +234,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Slide Conversion -->
                     <div class="conversion-slide top-slide swiper-slide bg-orange-color main-slider-bg-dark">
                         <div class="container table full-height">
                             <div class="row table-cell">
@@ -276,7 +271,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide top-slide bg-green-color main-slider-bg-dark">
+                    <!-- End Slide Conversion -->
+
+                    <!-- Slide Ecommerce -->
+                    <div class="ecommerce-slide swiper-slide top-slide bg-green-color main-slider-bg-dark">
 
                         <div class="container table full-height">
                             <div class="row table-cell">
@@ -357,7 +355,7 @@
                     <a href="#" class="slides-item bg-orange-color">
                         <div class="content">
                             <div class="text-wrap">
-                                <h4 class="slides-title">Conversation Rate Optimization</h4>
+                                <h4 class="slides-title">Conversion Rate Optimization</h4>
                             </div>
                             <div class="slides-number">04</div>
                         </div>
@@ -504,39 +502,39 @@
                     <div class="case-item-wrap">
 
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <a href="https://3upscholars.com/" target="_blank">
                             <div class="case-item">
                                 <div class="case-item__thumb">
-                                    <img src="img/case1.jpg" alt="our case">
+                                    <img src="img/3upscholars.jpg" alt="our case">
                                 </div>
-                                <a href="#">
-                                  <p>3UPSCHOLARS.COM</p>
+                                  <p class="featured-work-title">3UPSCHOLARS.COM</p>
                                   <p>Branding, Site Design, Lead Generation</p>
-                                </a>
                             </div>
+                            </a>
                         </div>
 
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                          <a href="http://winkbeds.com/" target="_blank">
                             <div class="case-item">
                                 <div class="case-item__thumb">
-                                    <img src="img/case1.jpg" alt="our case">
+                                    <img src="img/winkbeds.png" alt="our case">
                                 </div>
-                                <a href="#">
-                                  <p>WINKBEDS.COM</p>
-                                  <p>Complete Website Rebuild</p>
-                                </a>
+                                <p class="featured-work-title">WINKBEDS.COM</p>
+                                <p>Complete Site Rebuild</p>
                             </div>
+                          </a>
                         </div>
 
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                          <a href="http://swipesum.com/" target="_blank">
                             <div class="case-item">
                                 <div class="case-item__thumb">
-                                    <img src="img/case1.jpg" alt="our case">
+                                    <img src="img/swipesum.png" alt="our case">
                                 </div>
-                                <a href="#">
-                                  <p>FLOWKINETIC.COM</p>
-                                  <p>Branding, Site Design, SEO</p>
-                                </a>
+                                  <p class="featured-work-title">SWIPESUM.COM</p>
+                                  <p>Site Design, Site Build</p>
                             </div>
+                          </a>
                         </div>
 
 
@@ -594,6 +592,7 @@
                                             <img src="img/avatar.png" alt="avatar">
                                         </div>
                                     </div>
+
                                     <div class="testimonial-slider-item swiper-slide">
                                         <div class="testimonial-content">
                                             <p class="text" data-swiper-parallax="-200">Our sales have doubled since Pineapple built us a new site and started managing our PPC campaigns. It's hard to argue with those results!
@@ -603,7 +602,19 @@
 
                                         </div>
                                         <div class="avatar" data-swiper-parallax="-50">
-                                            <img src="img/avatar.png" alt="avatar">
+                                            <img src="img/avatar5.png" alt="avatar">
+                                        </div>
+                                    </div>
+
+                                    <div class="testimonial-slider-item swiper-slide">
+                                        <div class="testimonial-content">
+                                            <p class="text" data-swiper-parallax="-200">We worked with Pineapple in stages: first a logo redesign, then a full re-brand, then a new site, and finally a digital marketing campaign. It's done wonders for our brand and our bottom line.
+                                            </p>
+                                            <a href="#" class="author" data-swiper-parallax="-150">Michael Jones</a>
+                                            <a href="#" class="company" data-swiper-parallax="-150">3up Scholars</a>
+                                        </div>
+                                        <div class="avatar" data-swiper-parallax="-50">
+                                            <img src="img/avatar2.png" alt="avatar">
                                         </div>
                                     </div>
 
@@ -669,7 +680,7 @@ End Monthly Pineapple -->
 
 <!-- Pineapple-Score -->
 
-<div class="container-fluid">
+<div class="container-fluid" id="pineapple-score">
     <div class="row">
 
         <div class="seo-score scrollme">
@@ -690,10 +701,10 @@ End Monthly Pineapple -->
 
                                     <div class="row">
 
-                                        <div class="col-lg-8 no-padding col-md-12 col-xs-12 col-sm-12">
+                                        <div class="col-lg-6 no-padding col-md-12 col-xs-12 col-sm-12">
                                             <input class="input-dark site" required="required" placeholder="Your Website's URL">
                                         </div>
-                                        <div class="col-lg-4 no-padding col-md-12 col-xs-12 col-sm-12">
+                                        <div class="col-lg-6 no-padding col-md-12 col-xs-12 col-sm-12">
                                             <input class="input-dark e-mail" required="required" placeholder="Your Email" type="email">
                                         </div>
 
